@@ -637,4 +637,21 @@ public class XmlPathTest {
         // Then
         assertThat(xmlPath.getString("root.some-list[0]"), equalTo("one"));
     }
+
+    @Test public void
+    trying_to_get_an_attribute_that_doesnt_exists_returns_null() {
+        // Given
+        String xml = "  <root>" //
+                    + "   <item type=\"normal\">item_1_content</item>"//
+                    + "   <item type=\"special\">item_1_content</item>"//
+                    + "   <item type=\"\">item_1_content</item>"//
+                    + "   <item>item_2_content</item>"//
+                    + " </root>";
+
+        // When
+        XmlPath xmlPath = new XmlPath(xml).setRoot("root");
+
+        // Then
+        assertThat(xmlPath.getString("item[3].@type"), nullValue());
+    }
 }
