@@ -19,6 +19,7 @@ Change log next version
 * Fixing NullPointerException for GET requests with an empty body (issue 642)
 * Form authentication for fully-qualified URIs now uses the URI specified in the request instead of just localhost (issue 641)
 * Improve escaping for XmlPath's containing colon. For example you can now do like this without manually having to escape anything in the path: "x:something.x:y[0]" (issue 647)
+* Getting an attribute value from an XmlPath expression that doesn't exists now returns null instead of an empty list (issue 650).
 
 Change log 2.8.0 (2015-12-18)
 -----------------------------
